--- a/pages.htm
+++ b/pages.htm
@@ -5,12 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="page.css">
 </head>
-<body bgcolor="orange">
+<body bgcolor="tomato">
     <h1><center><u>My Interests</u></center></h1>
     <h1><u>Photography</u></h1>
     <h3><u>---My photos---</u></h3>
-    <img src="https://1drv.ms/u/s!AgOkSbucNiaGiBfNRumOzbRS8OZ0?e=4HsuRq">
-
+    <img src="./images/flo.jpeg">
+    <img src="./images/1657529917819-01.jpeg">
+    <img src="./images/1658847740094-01.jpeg">
+    <img src="./images/1653918120369-02.jpeg">
+    <img src="./images/1667654519146-03.jpeg">
+    <img src="./images/IMG_20221201_172805-1.jpg">
+    <img src="./images/IMG-20230127-WA0095.jpg">
+    <img src="./images/PXL_20230126_131916629.jpg">
+    <img src="./images/IMG_20230128_122641_1.jpg">
+    
 </body>
 </html>
