--- a/portfolio.htm
+++ b/portfolio.htm
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styport.css">
 </head>
-<body bgcolor="CYAN">
+<body bgcolor="cyan">
     <h1><center>PORTFOLIO</center></h1>
     
     <div class="pt"></div>
@@ -15,8 +15,11 @@
     <h2><B><CENTER>AISWARYA P NAIR</CENTER></B></h2>
     <h3><b><center>MCA STUDENT</center></b></h3>
     <h3><b><center>Macfast College Thiruvalla</center></b></h3>
+   <center> <img src=""></center>
     <h4><center>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt tenetur, doloremque asperiores aperiam praesentium optio amet quisquam aliquam, beatae repellendus voluptates mollitia. Accusamus quasi doloribus molestiae fuga hic. Accusantium, ipsam?</center></h4>
+    
      <center><a href="pages.htm">click here to see my interests</a></center>
+     <center><a href="contact.html">contact</a></center>
    
 </body>
 </html>
