--- a/index.htm
+++ b/index.htm
@@ -16,8 +16,8 @@
     <h3><b><center>MCA STUDENT</center></b></h3>
     <h3><b><center>Macfast College Thiruvalla</center></b></h3>
    <center> <img src="images/mypic.jpg"></center>
-    <h4><center>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt tenetur, doloremque asperiores aperiam praesentium optio amet quisquam aliquam, beatae repellendus voluptates mollitia. Accusamus quasi doloribus molestiae fuga hic. Accusantium, ipsam?</center></h4>
-    
+    <h4><marquee><center>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt tenetur, doloremque asperiores aperiam praesentium optio amet quisquam aliquam, beatae repellendus voluptates mollitia. Accusamus quasi doloribus molestiae fuga hic. Accusantium, ipsam?</center></marquee></h4>
+    <hr><center>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis blanditiis vitae inventore ratione alias! Laudantium neque consectetur, magnam illo ducimus ratione vel et possimus, labore quibusdam illum, fuga assumenda repudiandae?</center>
      <center><a href="pages.htm">click here to see my interests</a></center>
      <center><a href="contact.html">contact</a></center>
    
